mdapi/unpackaged/objects/Basecamp_Version__c.object
<CustomObject>
    <fields>
        <fullName>Confirmation_Text__c</fullName>
        <label>Confirmation Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Confirmation_Title__c</fullName>
        <label>Confirmation Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enforce_Correct_Answers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Correct Answers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Greeting_Text__c</fullName>
        <label>Greeting Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Greeting_Title__c</fullName>
        <label>Greeting Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Text__c</fullName>
        <label>Questionnaire Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Title__c</fullName>
        <label>Questionnaire Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <label>Questionnaire</label>
        <referenceTo>Basecamp_Questionnaire__c</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>